--- a/style.css
+++ b/style.css
@@ -119,11 +119,20 @@
     border: 1px solid #888;
     width: 80%;
     position: relative;
+    
   }
   
   .modal-image {
-    max-width: 100%;
-    height: auto;
+    float: left;
+    padding: 12px;
+  }
+
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+    color: white;
+    
   }
   
   .close {
