--- a/style.css
+++ b/style.css
@@ -1,306 +1,300 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background: #2e364a;
-  }
-  
-  .container_wrapper {
-    position: relative;
-    margin: 75px auto;
-    max-width: 950px;
-    background: #8891a9;
-    border: 2px solid #3d3d3d;
-    border-radius: 20px;
-  }
-  
-  .container_inner {
-   
-    padding: 20px 30px;
-  }
-  
-  .hangingindent {
-    padding-left: 22px ;
-    text-indent: -22px ;
-  }
-  
-  .home__menu{
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:25px;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-.home__menu a{
-    text-transform: uppercase;
-    line-height: 32px;
-    font-size: 22px;
-    font-weight: 500;
-    transition: all 0.2s;
-    position: relative;
+
+body {
+  /* background: #2e364a; */
+  background-image: linear-gradient(
+    rgb(212, 69, 159),
+   
+    rgb(229, 255, 0)
+  );
+}
+
+.container_wrapper {
+  position: relative;
+  margin: 75px auto;
+  max-width: 950px;
+  background: #8891a9;
+  border: 2px solid #3d3d3d;
+  border-radius: 20px;
+}
+
+.container_inner {
+  padding: 20px 30px;
+}
+
+.hangingindent {
+  padding-left: 22px;
+  text-indent: -22px;
+}
+
+.home__menu {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+.home__menu a {
+  text-transform: uppercase;
+  line-height: 32px;
+  font-size: 22px;
+  font-weight: 500;
+  transition: all 0.2s;
+  position: relative;
 }
 .home__menu a:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #0087ca;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
 }
 .home__menu a:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
-  
-  .nav-links {
-    list-style-type: none;
-    display: flex;
-    gap: 10px;
-    padding-bottom: 20px;
-  }
-  
-  .nav-link {
-    text-decoration: none;
-    color: white;
-    font-size: 1.2rem;
-    cursor: pointer;
-  }
-  
-  .nav-link:hover {
-    color: #ccc;
-  }
-  
-  button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    padding: 10px 24px;
-  }
-  /* Add the CSS code for the Read More button and the modal outside the media query */
+
+.nav-links {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  padding-bottom: 20px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.nav-link:hover {
+  color: #ccc;
+}
+
+button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  padding: 10px 24px;
+}
+/* Add the CSS code for the Read More button and the modal outside the media query */
 .read-more {
-    display: inline-block;
-    background-color: #eaa023;
-    padding: 8px 16px;
-    margin-top: 10px;
-    border-radius: 5px;
-    font-weight: 500;
-    text-decoration: none;
-    color: #ffffff;
-    cursor: pointer;
-  }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-  
-  .modal-content {
-    background-color: #2f363e;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    position: relative;
-    
-  }
-  
-  .modal-image {
-    float: left;
-    padding: 12px;
-  }
+  display: inline-block;
+  background-color: #eaa023;
+  padding: 8px 16px;
+  margin-top: 10px;
+  border-radius: 5px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #ffffff;
+  cursor: pointer;
+}
 
-  .clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-    color: white;
-    
-  }
-  
-  .close {
-    color: white;
-    font-size: 28px;
-    font-weight: bold;
-    position: absolute;
-    right: 10px;
-    top: 5px;
-    cursor: pointer;
-  }
-  
-  /* The rest of your CSS code */
-  
-  
-  .quiz {
-    background: #fff;
-    padding: 10px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-    text-align: center;
-  }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
-  .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
-  }
-  
-  
-  .correct-incorrect {
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 6px;
-    font-weight: bold;
-    display: inline-block;
-  }
-  
-  .correct {
-    background-color: #4caf50;
-    color: white;
-  }
-  
-  .incorrect {
-    background-color: #f44336;
-    color: white;
-  }
-  
-  .text-hidden {
-    display: none;
-  }
-  
+.modal-content {
+  background-color: #2f363e;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  position: relative;
+}
 
-  #correct-answers-container {
-    background-color: white;
-    color: #2e364a;
-    font-size: 1.2rem;
-    font-weight: bold;
-    padding: 10px 20px;
-    border-radius: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 15;
-  }
-  
-  
-  .quiz {
-    font-family: 'Poppins';
-    color: white;
-    background: #2f363e;
-    padding: 10px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-  }
-  
-  .timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 100px auto;
-  }
-  
-  .container {
-    padding: 10px 50px;
-    position: relative;
-    width: 50%;
-    animation: movedown 1s linear forwards;
-    opacity: 0;
-  }
-  
+.modal-image {
+  float: left;
+  padding: 12px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+  color: white;
+}
+
+.close {
+  color: white;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  cursor: pointer;
+}
+
+/* The rest of your CSS code */
+
+.quiz {
+  background: #fff;
+  padding: 10px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+}
+
+.correct-incorrect {
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 6px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.correct {
+  background-color: #4caf50;
+  color: white;
+}
+
+.incorrect {
+  background-color: #f44336;
+  color: white;
+}
+
+.text-hidden {
+  display: none;
+}
+
+#correct-answers-container {
+  background-color: white;
+  color: #2e364a;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 15;
+}
+
+.quiz {
+  font-family: "Poppins";
+  color: white;
+  background: #2f363e;
+  padding: 10px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+}
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
+}
+
+.container {
+  padding: 10px 50px;
+  position: relative;
+  width: 50%;
+  animation: movedown 1s linear forwards;
+  opacity: 0;
+}
 
 @keyframes movedown {
-  0%{
+  0% {
     opacity: 1;
     transform: translateY(-30px);
   }
-  100%{
+  100% {
     opacity: 1;
     transform: translateY(0px);
   }
 }
 
-
-.container:nth-child(1){
+.container:nth-child(1) {
   animation-delay: 0s;
 }
-.container:nth-child(2){
+.container:nth-child(2) {
   animation-delay: 1s;
 }
-.container:nth-child(3){
+.container:nth-child(3) {
   animation-delay: 2s;
 }
-.container:nth-child(4){
+.container:nth-child(4) {
   animation-delay: 3s;
 }
-.container:nth-child(5){
+.container:nth-child(5) {
   animation-delay: 4s;
 }
-.container:nth-child(6){
+.container:nth-child(6) {
   animation-delay: 5s;
 }
 
-.text-box{
+.text-box {
   padding: 20px 30px;
   background: #fff;
   position: relative;
   border-radius: 6px;
   font-size: 15px;
 }
-.left-container{
+.left-container {
   left: 0;
 }
-.right-container{
+.right-container {
   left: 50%;
 }
 
-
-
 @keyframes moveline {
-  0%{
+  0% {
     height: 0;
   }
-  100%{
+  100% {
     height: 100%;
   }
 }
 
-.text-box h2{
+.text-box h2 {
   font-weight: 600;
 }
-.text-box small{
+.text-box small {
   display: inline-block;
   margin-bottom: 15px;
 }
 
-.left-container-arrow{
+.left-container-arrow {
   height: 0;
   width: 0;
   position: absolute;
@@ -311,7 +305,7 @@
   border-left: 15px solid #fff;
   right: -15px;
 }
-.right-container-arrow{
+.right-container-arrow {
   height: 0;
   width: 0;
   position: absolute;
@@ -323,84 +317,75 @@
   left: -15px;
 }
 
-  .info-btn.show {
-    display: inline-block;
-  }
-  
+.info-btn.show {
+  display: inline-block;
+}
+
 .info-btn {
-    display: none;
-    background-color: #574caf;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    font-size: 12px;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: 4px 8px;
-    position:relative;
-    top: 10px;
-    right: 10px;
-  }
-  
-  
+  display: none;
+  background-color: #574caf;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 4px 8px;
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
 
- 
-  
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-
-  
-
-@media screen and (max-width: 600px){
-  
-  .timeline{
+@media screen and (max-width: 600px) {
+  .timeline {
     margin: 50px auto;
   }
-  .timeline::after{
+  .timeline::after {
     left: 31px;
   }
-  .container{
+  .container {
     width: 100%;
     padding-left: 80px;
     padding-right: 25px;
   }
-  .text-box{
+  .text-box {
     font-size: 13px;
   }
-  .text-box small{
+  .text-box small {
     margin-bottom: 10px;
   }
-  .right-container{
+  .right-container {
     left: 0;
   }
 
-  .left-container img, .right-container img{
+  .left-container img,
+  .right-container img {
     left: 10px;
   }
 
-  .left-container-arrow{
+  .left-container-arrow {
     border-right: 15px solid #fff;
     border-left: 0;
     left: -15px;
     z-index: -10;
   }
 
-.right-container-arrow{
+  .right-container-arrow {
     border-right: 16px solid #fff;
     border-left: 0;
     left: -15px;
@@ -413,9 +398,9 @@
     align-items: center;
     min-height: 100vh;
     margin: 0;
-}
+  }
 
-@keyframes tonext {
+  @keyframes tonext {
     75% {
       left: 0;
     }
@@ -429,7 +414,7 @@
       left: 0;
     }
   }
-  
+
   @keyframes tostart {
     75% {
       left: 0;
@@ -444,7 +429,7 @@
       left: 0;
     }
   }
-  
+
   @keyframes snap {
     96% {
       scroll-snap-align: center;
@@ -459,50 +444,51 @@
       scroll-snap-align: center;
     }
   }
-  
+
   body {
     max-width: 37.5rem;
     margin: 0 auto;
     padding: 0 1.25rem;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
   }
-  
+
   * {
     box-sizing: border-box;
     scrollbar-color: transparent transparent; /* thumb and track color */
     scrollbar-width: 0px;
   }
-  
+
   *::-webkit-scrollbar {
     width: 0;
   }
-  
+
   *::-webkit-scrollbar-track {
     background: transparent;
   }
-  
+
   *::-webkit-scrollbar-thumb {
     background: transparent;
     border: none;
   }
-  
+
   * {
     -ms-overflow-style: none;
   }
-  
-  ol, li {
+
+  ol,
+  li {
     list-style: none;
     margin: 0;
     padding: 0;
   }
-  
+
   .carousel {
     position: relative;
     padding-top: 75%;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
   }
-  
+
   .carousel__viewport {
     position: absolute;
     top: 0;
@@ -515,7 +501,7 @@
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
   }
-  
+
   .carousel__slide {
     position: relative;
     flex: 0 0 100%;
@@ -523,21 +509,21 @@
     background-color: #f99;
     counter-increment: item;
   }
-  
+
   .carousel__slide:nth-child(even) {
     background-color: #99f;
   }
-  
+
   .carousel__slide:before {
     content: counter(item);
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%,-40%,70px);
+    transform: translate3d(-50%, -40%, 70px);
     color: #fff;
     font-size: 2em;
   }
-  
+
   .carousel__snapper {
     position: absolute;
     top: 0;
@@ -546,7 +532,7 @@
     height: 100%;
     scroll-snap-align: center;
   }
-  
+
   @media (hover: hover) {
     .carousel__snapper {
       animation-name: tonext, snap;
@@ -554,23 +540,23 @@
       animation-duration: 4s;
       animation-iteration-count: infinite;
     }
-  
+
     .carousel__slide:last-child .carousel__snapper {
       animation-name: tostart, snap;
     }
   }
-  
+
   @media (prefers-reduced-motion: reduce) {
     .carousel__snapper {
       animation-name: none;
     }
   }
-  
+
   .carousel:hover .carousel__snapper,
   .carousel:focus-within .carousel__snapper {
     animation-name: none;
   }
-  
+
   .carousel__navigation {
     position: absolute;
     right: 0;
@@ -578,12 +564,12 @@
     left: 0;
     text-align: center;
   }
-  
+
   .carousel__navigation-list,
   .carousel__navigation-item {
     display: inline-block;
   }
-  
+
   .carousel__navigation-button {
     display: inline-block;
     width: 1.5rem;
@@ -595,7 +581,7 @@
     font-size: 0;
     transition: transform 0.1s;
   }
-  
+
   .carousel::before,
   .carousel::after,
   .carousel__prev,
@@ -610,20 +596,20 @@
     font-size: 0;
     outline: 0;
   }
-  
+
   .carousel::before,
   .carousel__prev {
     left: -1rem;
   }
-  
+
   .carousel::after,
   .carousel__next {
     right: -1rem;
   }
-  
+
   .carousel::before,
   .carousel::after {
-    content: '';
+    content: "";
     z-index: 1;
     background-color: #333;
     background-size: 1.5rem 1.5rem;
@@ -635,47 +621,12 @@
     text-align: center;
     pointer-events: none;
   }
-  
+
   .carousel::before {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
   }
-  
+
   .carousel::after {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
   }
-
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
